# CEWPOS

./: .gitignore  CEWPOS_ATTESTATION_CALCULUS.md  DEPLOYMENT.md  README.md  WHY.md
attestation-calculus-spike/: Cargo.toml  README.md
attestation-calculus-spike/src/: effect.rs  forms.rs  lib.rs  main.rs  pdma.rs  sexpr.rs  transport.rs
attestation-calculus-spike/tests/: calculus.rs  federation.rs  wire.rs
object-model/: CC1.7-fair-exchange.md  CEWPOS_OBJECT_MODEL.md  agent-deferred.json  capabilities.json  cewpos-object-model.json  civilizational-surface.md  civilizational-top-gaps.json  civilizationalFunctions.json  constitution-map.md  gap-analysis.md  knobs-map.md  knobs.json  objects.json  open-items.json  schema.json  transformations.json
view-form-component/: README.md  build.sh
view-form-component/cc-guest/: Cargo.toml
view-form-component/cc-guest/src/: lib.rs
view-form-component/guest/: Cargo.toml
view-form-component/guest/src/: lib.rs
view-form-component/host/: Cargo.toml
view-form-component/host/src/: lib.rs  main.rs
view-form-component/host/tests/: scene_roundtrip.rs
view-form-component/malicious-guest/: Cargo.toml
view-form-component/malicious-guest/src/: lib.rs
view-form-component/malicious-guest/wit/: world.wit
view-form-component/wit/: view-form.wit
view-forms-spike/: Cargo.toml  README.md
view-forms-spike/.cargo/: config.toml
view-forms-spike/src/: lib.rs  scene.rs  view_form.rs
wasm-component-toolchain-spike/: build.sh
wasm-component-toolchain-spike/cc-guest/src/: bindings.rs  lib.rs
wasm-component-toolchain-spike/cc-guest/wit/: world.wit
wasm-component-toolchain-spike/guest/src/: lib.rs
wasm-component-toolchain-spike/host/: Cargo.toml
wasm-component-toolchain-spike/host/src/: main.rs
wasm-component-toolchain-spike/malicious-guest/src/: lib.rs
wasm-component-toolchain-spike/malicious-guest/wit/: world.wit
