[package]
name = "cc-guest"
version = "0.1.0"
# NOTE: cargo-component 0.20's generated bindings.rs is not edition-2024 clean
# (unsafe_op_in_unsafe_fn is a hard error in 2024), so pin the guest to 2021.
edition = "2021"

[dependencies]
wit-bindgen-rt = { version = "0.44.0", features = ["bitflags"] }
serde_json = "1"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "demo:view-form"

[package.metadata.component.dependencies]

[workspace]
